--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
               <button class="btn btn-outline-success" type="submit"
                 id="btn-Search">Search</button>
             </form>
+            <!--icon menu login/register-->
+
+            <!--      -->
             <div class="modal fade" id="exampleModal" tabindex="-1"
               aria-labelledby="exampleModalLabel" aria-hidden="true">
               <div class="modal-dialog">
@@ -199,6 +202,50 @@
         </div>
       </nav>
     </header>
+    <!--BANNER -->
+<div id="bannerCarousel" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#bannerCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#bannerCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#bannerCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://cdn.tgdd.vn/Files/2021/08/05/1373210/top-20-kieu-toc-nam-dep-dan-dau-xu-huong-cuc-hot-cho-mua-he-202108051350164968.jpg" class="d-block w-100" alt="Tóc Nam Đẹp">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Kiểu Tóc Hiện Đại</h5>
+        <p>Khám phá những kiểu tóc hot nhất hiện nay.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="https://cdn.tgdd.vn/Files/2021/08/05/1373210/top-25-kieu-toc-nam-dep-dan-dau-xu-huong-cuc-hot-cho-mua-he-202201111258198019.jpeg" class="d-block w-100" alt="Kiểu Tóc">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Đẳng Cấp Barber</h5>
+        <p>Trải nghiệm dịch vụ cắt tóc chuyên nghiệp.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="https://cdn.tgdd.vn/Files/2021/08/05/1373210/top-20-kieu-toc-nam-dep-dan-dau-xu-huong-cuc-hot-cho-mua-he-202108051350021072.jpg" class="d-block w-100" alt="Tóc Đẹp">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Barber Style</h5>
+        <p>Hãy chọn phong cách phù hợp với bạn.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Điều khiển nút Previous / Next -->
+  <button class="carousel-control-prev" type="button" data-bs-target="#bannerCarousel" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#bannerCarousel" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+    <!--BANNER -->
     <section id="carousel">
       <h2>Khám Phá Các Kiểu Tóc Nam Hot Nhất Hiện Nay!</h2>
       <div class="carousel-wrapper">
