--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous">
+      <!-- Toastify -->
+      <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="./css/index.css">
     <style>
       
@@ -92,13 +94,14 @@
                       data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-body">
-                    <form>
+                    <form class="form-reset" >
                       <div class="mb-3">
                         <div class="form-group">
                           <div class="input-group">
                             <div class="input-group-prepend">
                               <span class="input-group-text"><i
-                                  class="fa fa-user"></i></span>
+                                  class="fa fa-user"></i>
+                                </span>
                             </div>
                             <input type="text" name="tk" id="tknv"
                               class="form-control input-sm"
@@ -173,12 +176,12 @@
                               <span class="input-group-text"><i
                                   class="fa fa-briefcase"></i></span>
                             </div>
-                            <select class="form-control" id="chucvu">
+                            <select class="form-control" id="loai">
                               <option>Chọn Loại</option>
-                              <option>Hớt Tóc</option>
-                              <option>Hớt Tóc + Cạo Mặt </option>
-                              <option>Hớt Tóc + Rấy tai</option>
-                              <option>Hớt Tóc + Cạo Mặt +Rấy tai</option>
+                              <option value="0">Hớt Tóc</option>
+                              <option value="1">Hớt Tóc + Cạo Mặt </option>
+                              <option value="2">Hớt Tóc + Rấy tai</option>
+                              <option value="3">Hớt Tóc + Cạo Mặt +Rái tai</option>
 
                             </select>
                           </div>
@@ -191,7 +194,7 @@
                   <div class="modal-footer">
                     <button type="button" class="btn btn-danger"
                       data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-warning">Xác
+                    <button type="button" class="btn btn-warning" data-bs-dismiss="modal" onclick="xacNhanLich()">Xác
                       Nhận</button>
                   </div>
                 </div>
@@ -235,11 +238,14 @@
   </div>
 
   <!-- Điều khiển nút Previous / Next -->
-  <button class="carousel-control-prev" type="button" data-bs-target="#bannerCarousel" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+  <button class="carousel-control-prev" type="button" 
+    data-bs-target="#bannerCarousel" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" 
+    aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#bannerCarousel" data-bs-slide="next">
+  <button class="carousel-control-next" type="button" 
+    data-bs-target="#bannerCarousel" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
@@ -384,5 +390,7 @@
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+        <script src="./index.js"></script>
     </body>
   </html>
